welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: type mismatch;
 found   : Int(110)
 required: Boolean
  if (90<n<110){
           ^nearHundred:4: error: type mismatch;
 found   : Int(210)
 required: Boolean
  } else if (190<n<210){
                   ^